--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,9 @@
 .logo {
-  --gap: 0.35rem;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  border: 1px solid red;
+  gap: 0.35em;
   text-decoration: none;
   color: inherit;
 }
